# momo-canvas

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  竞品分析-AI无限画布工具.md
.claude/: settings.json
.claude/hooks/: restart-app.ps1
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/core/: aiWire.ts  blobStore.ts  cameraLight.ts  charPresets.ts  editPrompts.ts  errorHelp.ts  external.ts  imageInfo.ts  lnk.ts  maskCanvas.ts  modelMeta.ts  persist.ts  protoPresets.ts  resizeMath.ts  runner.ts  seedTemplates.ts  sound.ts  stylePresets.ts  types.ts  utils.ts  videoEdit.ts  videoMeta.ts
src/core/services/: assetFiles.ts  audioGen.ts  comfy.ts  customProto.ts  http.ts  imageGen.ts  imageSaver.ts  llm.ts  modelList.ts  protoCalibrate.ts  protoSelfHeal.ts  updater.ts  videoGen.ts  webSearch.ts
src/core/stores/: assetStore.ts  boardStore.ts  comfyStore.ts  logStore.ts  promptHistStore.ts  settingsStore.ts  templateStore.ts  uiStore.ts
src/modules/assets/: AssetLibrary.tsx  ShortcutBar.tsx  assets.css  dragState.ts
src/modules/canvas/: AddNodeMenu.tsx  AiWirePanel.tsx  CanvasPalette.tsx  GenConfigPanel.tsx  GenPromptBar.tsx  MaskEditor.tsx  NodeShell.tsx  OutpaintEditor.tsx  RegionPicker.tsx  SmartCanvas.tsx  canvas.css  nodeCatalog.tsx
src/modules/canvas/nodes/: AudioGenNode.tsx  AudioNode.tsx  CaptionNode.tsx  CharCardNode.tsx  ChatNode.tsx  CombineNode.tsx  ComfyNode.tsx  CropNode.tsx  EnhanceNode.tsx  FrameNode.tsx  GroupNode.tsx  ImageGenNode.tsx  ImageNode.tsx  InpaintNode.tsx  LlmTextNode.tsx  MattingNode.tsx  MultiAngleNode.tsx  NoteNode.tsx  OutpaintNode.tsx  PromptNode.tsx  RelightNode.tsx  (+8 more)
src/modules/charlib/: CharLibrary.tsx  charlib.css
src/modules/comfy/: TemplateManager.tsx  templateIO.ts  wfGraph.ts
src/modules/settings/: SettingsDialog.tsx  protoTabStore.ts
src/modules/shell/: GalleryDock.tsx  Titlebar.tsx  shell.css
src/styles/: base.css  theme.css
src/ui/: AtTextArea.tsx  ModelPicker.tsx  PromptHistory.tsx  SphereGizmo.tsx  Thumb.tsx  VideoThumb.tsx  icons.tsx  kit.tsx
