[package]
name = "momo-canvas"
version = "0.1.0"
description = "MOMO 智能画布 - AI 创作智能画布工作站"
authors = ["PENG"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "momo_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# unsafe-headers：允许前端显式控制 Origin 头（传空 = 摘掉）。
# ComfyUI 等本地服务开着 DNS-rebinding 防护，Origin 与 Host 不一致会 403，
# 而插件默认无条件把 webview 的 Origin 塞进每个请求 —— 必须能摘。
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-drag = "2"
# 自动更新：安装版走 updater（GitHub Releases latest.json），便携版由前端下载 zip 替换
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

